force-app/main/default/objects/RepairPackage__c/RepairPackage__c.object-meta.xml
<CustomObject>
    <description>정비 패키지 마스터 정보 (Internal, Sales)</description>
    <label>Repair Package</label>
    <nameField>
        <label>Repair Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Package</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>