force-app/main/default/objects/RepairPackage__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>