force-app/main/default/objects/RepairPackage__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 30th Nov 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1448</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Wheels and Tires</fullName>
            </value>
            <value>
                <fullName>General Inspection (TÜV)</fullName>
            </value>
            <value>
                <fullName>Recall Campaigns</fullName>
            </value>
            <value>
                <fullName>Additional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>