force-app/main/default/objects/RepairPackage__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Service Center</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Repair Package</relationshipLabel>
    <relationshipName>RepairPackage</relationshipName>
    <type>Lookup</type>
</CustomField>