force-app/main/default/objects/RepairPackage__c/fields/DIST_CD__c.field-meta.xml
<CustomField>
    <fullName>DIST_CD__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Distributor code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>