force-app/main/default/objects/RepairPackage__c/fields/EffectiveDateFlag__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateFlag__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Effective Date Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>