force-app/main/default/objects/RepairPackage__c/fields/fm_VehicleName__c.field-meta.xml
<CustomField>
    <fullName>fm_VehicleName__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>Vehicle_Model__r.Name 
/*Modified By Mayank as we will not maintain vehicle model at product level but at Vehicle Model object level*/</formula>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>