force-app/main/default/objects/RepairPackage__c/fields/Free_Home_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Free_Home_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check is eligible for home to home delivery

Created By: Manoj Kumar
Created Date: 13/11/2020
User Story: Gd-1229
Purpose :- After Sales service available of Customer.</description>
    <label>Free Home Delivery</label>
    <type>Checkbox</type>
</CustomField>