force-app/main/default/objects/RepairPackage__c/fields/Is_Regional__c.field-meta.xml
<CustomField>
    <fullName>Is_Regional__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 1/12/2020
User Story: Gd-1229
Purpose :- After Sales service available of Customer.</description>
    <label>Is Regional</label>
    <type>Checkbox</type>
</CustomField>