force-app/main/default/objects/RepairPackage__c/fields/IsForAllModel__c.field-meta.xml
<CustomField>
    <fullName>IsForAllModel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Is For All Model</label>
    <type>Checkbox</type>
</CustomField>