force-app/main/default/objects/RepairPackage__c/fields/NetTotalCost__c.field-meta.xml
<CustomField>
    <fullName>NetTotalCost__c</fullName>
    <formula>TotalPrice__c - ( TotalPrice__c * Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>