force-app/main/default/objects/RepairPackage__c/fields/PackageNumber__c.field-meta.xml
<CustomField>
    <fullName>PackageNumber__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <inlineHelpText>GWMS Package Code</inlineHelpText>
    <label>Package Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>