force-app/main/default/objects/RepairPackage__c/fields/PeriodYear__c.field-meta.xml
<CustomField>
    <fullName>PeriodYear__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Period (Year)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>