force-app/main/default/objects/RepairPackage__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant
Created Date: 19th Jan 2021
Purpose: This field link repair package and associated price book.</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Repair Package</relationshipLabel>
    <relationshipName>Repair_Package</relationshipName>
    <type>Lookup</type>
</CustomField>