force-app/main/default/objects/RepairPackage__c/fields/Total_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Cost__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 16th Nov 2020
Purpose: This field will show the total net cost</description>
    <label>Total Net Cost</label>
    <summarizedField>RepairPackageItem__c.Total_Net_Cost__c</summarizedField>
    <summaryForeignKey>RepairPackageItem__c.RepairPackage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>