force-app/main/default/objects/RepairPackage__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 16th Nov 2020
Purpose: This field will show the total tax of all the line items.</description>
    <label>Total Tax</label>
    <summarizedField>RepairPackageItem__c.TotalTax__c</summarizedField>
    <summaryForeignKey>RepairPackageItem__c.RepairPackage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>