force-app/main/default/objects/RepairPackage__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <label>Total Price</label>
    <summarizedField>RepairPackageItem__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>RepairPackageItem__c.RepairPackage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>