force-app/main/default/objects/RepairPackage__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/9/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>AND( StartDate__c  &lt;=  TODAY() , EndDate__c  &gt;=  TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>