force-app/main/default/objects/RepairPackage__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant
Created Date: 24th Dec 2020
Purpose: This field will  capture the vehicle model for which the Repair package</description>
    <label>Vehicle Model</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Repair Package</relationshipLabel>
    <relationshipName>Repair_Package</relationshipName>
    <type>Lookup</type>
</CustomField>