force-app/main/default/objects/RepairPackage__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Vehicle Model</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vehicle</value>
        </filterItems>
        <filterItems>
            <field>$Source.IsForAllModel__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Repair Package</relationshipLabel>
    <relationshipName>RepairPackage</relationshipName>
    <type>Lookup</type>
</CustomField>