force-app/main/default/objects/RepairPackage__c/recordTypes/Additional_Services.recordType-meta.xml
<RecordType>
    <fullName>Additional_Services</fullName>
    <active>true</active>
    <label>Additional Services</label>
</RecordType>