force-app/main/default/objects/RepairPackage__c/recordTypes/GME.recordType-meta.xml
<RecordType>
    <fullName>GME</fullName>
    <active>true</active>
    <label>GME</label>
</RecordType>